<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_units_area_title">

        <ListPreference
            android:key="unit_system_preference"
            android:title="@string/settings_units_main_title"
            android:entries="@array/SupportedUnitSystems"
            android:entryValues="@array/SupportedUnitSystemsValues" />

        <ListPreference
            android:key="snellen_fraction_denominator_preference"
            android:title="@string/settings_snellen_fraction_denominator"
            android:entries="@array/SupportedSnellenFractionDenominators"
            android:entryValues="@array/SupportedSnellenFractionDenominatorsValues" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_user_area_title">

        <EditTextPreference
            android:key="user_distance_preference"
            android:title="@string/settings_user_main_title"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_user_distance_dialog_title"
            android:dialogMessage="@string/settings_user_distance_dialog_message_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_display_area_title">

        <EditTextPreference
            android:key="display_diagonal_size_preference"
            android:title="@string/settings_display_diagonal_title"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_display_diagonal_dialog_title"
            android:dialogMessage="@string/settings_display_diagonal_dialog_message" />

        <EditTextPreference
            android:key="display_horizontal_resolution_preference"
            android:title="@string/settings_display_hresolution_title"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_display_hresolution_dialog_title"
            android:dialogMessage="@string/settings_display_hresolution_dialog_message" />

        <EditTextPreference
            android:key="display_vertical_resolution_preference"
            android:title="@string/settings_display_vresolution_title"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_display_vresolution_dialog_title"
            android:dialogMessage="@string/settings_display_vresolution_dialog_message" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_chart_area_title">

        <ListPreference
            android:key="optotype_preference"
            android:title="@string/settings_optotype_format_title"
            android:entries="@array/SupportedOptotypes"
            android:entryValues="@array/SupportedOptotypesValues" />

        <EditTextPreference
            android:key="optotype_alpha_preference"
            android:title="@string/settings_contrast_sensitivity_title"
            android:inputType="number"
            android:dialogTitle="@string/settings_contrast_sensitivity_dialog_title"
            android:dialogMessage="@string/settings_contrast_sensitivity_dialog_message" />

        <CheckBoxPreference
            android:key="custom_limits_preference"
            android:title="@string/settings_custom_limits_title"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="custom_limit_upper_preference"
            android:dependency="custom_limits_preference"
            android:title="@string/settings_custom_limits_title_upper"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_custom_limits_title_upper"
            android:dialogMessage="@string/settings_custom_limits_message_upper" />

        <EditTextPreference
            android:key="custom_limit_lower_preference"
            android:dependency="custom_limits_preference"
            android:title="@string/settings_custom_limits_title_lower"
            android:inputType="numberDecimal"
            android:dialogTitle="@string/settings_custom_limits_title_lower"
            android:dialogMessage="@string/settings_custom_limits_message_lower" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_lowcolormode_devices_title">

        <SwitchPreference
            android:key="device_low_color_mode"
            android:title="@string/settings_lowcolormode_devices_title"
            android:switchTextOn="ON"
            android:switchTextOff="OFF" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Other Customizations">

        <EditTextPreference
            android:key="custom_results_font_size_preference"
            android:title="Bottom Results Font Size"
            android:inputType="number"
            android:dialogTitle="Choose the Font Size for Chart Results"
            android:dialogMessage="Choose the Font Size for Chart Results" />

    </PreferenceCategory>

</PreferenceScreen>