<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chartDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ideas.joaomeneses.snellen.SnellenChartActivity">

    <com.ideas.joaomeneses.snellen.SnellenOptotypeView
        android:id="@+id/snellenOptotypeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/snellenFractionValue"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/snellen_fraction_start_value"
        android:id="@+id/snellenFractionValue"
        android:layout_above="@+id/snellenFractionTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/snellen_fraction_title"
        android:id="@+id/snellenFractionTitle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/snellen_logmar_title"
        android:id="@+id/logMarTitle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/snellen_logmar_start_value"
        android:id="@+id/logMarValue"
        android:layout_above="@+id/logMarTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/snellen_decimal_title"
        android:id="@+id/decimalTitle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/snellen_decimal_start_value"
        android:id="@+id/decimalValue"
        android:layout_above="@+id/decimalTitle"
        android:layout_alignEnd="@+id/snellenOptotypeView" />

    

</RelativeLayout>
