<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ideas.joaomeneses.snellen.MainMenu">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:text="@string/main_menu_button_snellen"
        android:id="@+id/goToSnellenChartBtn"
        android:onClick="openSnellenChartActivity"
        android:layout_above="@+id/goToDuochromeBtn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/goToDuochromeBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:text="@string/main_menu_button_duochrome"
        android:id="@+id/goToDuochromeBtn"
        android:onClick="openDuochromeActivity"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/goToSettingsBtn"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/goToSettingsBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:text="@string/main_menu_button_settings"
        android:id="@+id/goToSettingsBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="openSettingsActivity"/>

</RelativeLayout>
